- Bugfix: Use the correct method signature for the error handler
  callback.
- Bugfix: Fixed the BOM detection in property names.
- Bugfix: Prevent a second the JS initialization if the hosting
  cms thinks that calling 'DOMContentLoaded' more than once is a
  good idea.
- Bugfix: Prevent a type hint for none variables.
- Bugfix: Add the missing file path filter to the backtrace
  analysis.

4.1.6
- Bugfix: Added the missing path filter to the real path resolver.
- Bugfix: Use strict encoding detection for strings for more
  reliable results.
- Bugfix: Fetch traversable data as soon as possible, because we do
  not want other analysis methods fetch traversable results, that
  are only fetchable once. DB results are a good example for this.

4.1.5
- Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
  the display of certain additional info values.
- Bugfix: Prevent an overflow in the additional info of the smoky
  grey skin.

4.1.4
- Added support for readonly properties
- Bugfix: Correctly identify uninitialized properties.
- Bugfix: Prevent unnecessary filesystem calls in the filepath
  analysis.
- Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
  the display of certain additional info values.

4.1.3
- Added microtime analysis to the float routing.
- Added microtime analysis to the string scalar analysis.
- Added type hint to the additional data for the first
  element.
- Updated to PHP 8.1
- Change: Code cleanup.
- Bugfix: Display info about public properties in predeclared
  classes.
- Bugfix: Comment inheritance resolving works more reliable.
- Bugfix: Method return type comment parsing works more
  reliable.
- Bugfix: Standard loading of the configuration file works again.
- Bugfix: Mime type string and file do not overwrite each others
  anymore.
- Bugfix: K-Type padding for the Hans skin is too small.

4.1.2
- Change: Do not display an empty array, when there are no
  attributes in the XML analysis.