@@ -21,6 +21,7 @@ Changelog
     - [Bugfix] Prevent a second the JS initialization if the hosting cms thinks that calling 'DOMContentLoaded' more than once is a good idea.
     - [Bugfix] Prevent a type hint for none variables.
     - [Bugfix] Add the missing file path filter to the backtrace analysis.
+    - [Bugfix] Fix the handling of the 8.1 Enum as a default value in the source generation.
 
 4.1.6
     - [Bugfix] Link to the documentation of the debug preset does not work anymore in the documentation.
